--- a/main.css
+++ b/main.css
@@ -29,13 +29,19 @@ button {
   font-family: 'Raleway', sans-serif;
   font-size: 20px;
   color: #fff;
-  background-color: #000000;
+  background-color: #330070;
   border: none;
   border-radius: 10px;
   cursor: pointer;
   box-shadow: 0 16px 36px rgba(139, 188, 192, 0.22);
   margin-right: 20px;
   padding: 8px;
+}
+
+button:hover {
+  background-color: #f6980c;
+  box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
+  transition: background-color 0.3s ease;
 }
 
 .about {
@@ -78,4 +84,100 @@ button {
 
 #castle {
   width: 500px;
+}
+
+
+.form__container {
+  width: 550px;
+}
+
+.form {
+  background-color: rgb(22, 0, 48);
+  color: #fff;
+  padding-top: 115px;
+  padding-bottom: 115px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+
+.form__group {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+.form form {
+  display: grid;
+  grid-gap: 20px;
+  margin-top: 60px;
+}
+
+.form label {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+
+.form input{
+  font-size: 18px;
+  color: #213053;
+  height: 60px;
+  padding: 0 20px 0 20px;
+  border: none;
+  border-radius: 15px;
+  outline: none;
+}
+
+.form select{
+  font-size: 18px;
+  color: #213053;
+  height: 60px;
+  padding: 0 20px 0 20px;
+  border: none;
+  border-radius: 15px;
+  appearance: none;
+  outline: none;
+}
+
+.form__submit {
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 40px;
+}
+
+footer {
+  padding: 90px 20px 90px 20px;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.footer__copyright {
+  margin-top: 40px;
+  text-align: center;
+  opacity: 0.5;
+}
+
+.footer__container {
+  display: flex;
+  justify-content: center;
+}
+
+.footer__group {
+  margin-right: 80px;
+}
+
+.footer__group h3 {
+  font-size: 16px;
+  opacity: 0.7;
+  margin-bottom: 30px;
+}
+
+.footer__links {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__links a {
+  margin-bottom: 15px;
 }
